fix: cursor not showing proper brush size

--- a/src/style.scss
+++ b/src/style.scss
@@ -470,8 +470,8 @@ section {
 	}
 
 	&.draw {
-		width: calc(var(--size) - 1rem);
-		height: calc(var(--size) - 1rem);
+		width: calc(var(--size)/2 - 0.5rem);
+		height: calc(var(--size)/2 - 0.5rem);
 		border-radius: 50%;
 		border: solid 0.25rem var(--colour);
 		transform: translate(-50%, -50%);
